force-app/main/default/objects/MIF_Mapping__mdt/MIF_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>It&apos;s used to map MIF files to MIF object in UploadMIFController</description>
    <label>MIF Mapping</label>
    <pluralLabel>MIF Mappings</pluralLabel>
</CustomObject>