force-app/main/default/objects/MIF_Mapping__mdt/fields/Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan__c</fullName>
    <label>Health Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L.A. CARE</fullName>
                <default>true</default>
                <label>L.A. CARE</label>
            </value>
            <value>
                <fullName>HealthNet</fullName>
            </value>
            <value>
                <fullName>Anthem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>