force-app/main/default/objects/MIF_Mapping__mdt/fields/Transformatinion_Method_Class__c.field-meta.xml
<CustomField>
    <fullName>Transformatinion_Method_Class__c</fullName>
    <description>Name of class that implements transformation methods for this Health Plan</description>
    <label>Transformatinion Method Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>