force-app/main/default/objects/MIF_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MIF</fullName>
                <default>true</default>
                <label>MIF</label>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
            <value>
                <fullName>ASF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>